Chrome OS: truncate text in virtual keyboard tray item

e.g. "INTL" is displayed as "IN" instead of "IN..."

BUG=711718

Review-Url: https://codereview.chromium.org/2826543002
Cr-Commit-Position: refs/heads/master@{#465050}

Former-commit-id: b0aaaea26c58a1c0603d20a672b4a6765b9a7f99